tests/error/0016-arrayinitsize.c
/*
PATTERN:

.
*/

int x[2] = {1, 2, 3};
